# khiva-python

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.md  README.md  README.rst  codecov.yml  rdocs-requirements.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.CI/travis/: after_success.sh  build.sh  build_and_test.sh  install-arrayfire.sh  install-arrayfire_osx.sh  install-cmake.sh  install-khiva.sh  install-khiva_linux.sh  install-khiva_osx.sh  install.sh  install_osx.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
benchmarks/: matrix.py
docs/: Makefile  authors.rst  changes.rst  conf.py  index.rst  khiva.rst  license.rst
docs/source/: authors.rst  changes.rst  conf.py  index.rst  modules.rst  tsa.algorithms.rst  tsa.rst  tsa.tsa_libraries.rst
docs/text/: faq.rst  how_to_contribute.rst  quick_start.rst
khiva/: __init__.py  array.py  clustering.py  dimensionality.py  distances.py  features.py  library.py  linalg.py  matrix.py  normalization.py  polynomial.py  regression.py  regularization.py  statistics.py
tests/: __init__.py
tests/unit_tests/: __init__.py  array_unit_tests.py  clustering_unit_tests.py  (+12 more)
tsa/: __init__.py  analyser.py  array.py  dimensionality.py  distances.py  features.py  grumpy.py  library.py  linalg.py  matrix.py  normalization.py  polynomial.py  regression.py  regularization.py  statistics.py  test.py
tsa_datasets/: __init__.py  dataset_generator.py  generator.py  peak_dataset_16000  random_dataset_1000  sel102m.mat
tsa_examples/: ecg_example.py
(+44 files in other folders)
