[metadata]
name = khiva
summary = khiva performs big sequence analytics by using GPU.
license = MPL-v2
author = Shapelets.io
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Programming Language :: Python :: 3.6
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development



[entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = khiva.module:function


[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of source and target:
packages =
    khiva